# prosus

./: .gitignore  README.md  claude.md  pyproject.toml
backend/: .env  .env.example  README.md  pyproject.toml
backend/data/: 5k_items_new_format@v1.jsonl  food_item_ids.csv  queries.csv
backend/data/combined_descriptions/: combined_descriptions.json  combined_descriptions@v0.jsonl  combined_descriptions_2025-11-09_04-08-45.json  combined_descriptions_2025-11-09_04-10-11.json  combined_descriptions_2025-11-09_04-18-13.json  combined_descriptions_2025-11-09_14-37-40.json  combined_descriptions_2025-11-09_23-08-09@v1.jsonl  combined_descriptions_2025-11-10_00-12-29@v1.jsonl  combined_descriptions_2025-11-10_00-20-47@v1.jsonl  combined_descriptions_2025-11-10_01-08-29@v1.jsonl  combined_descriptions_2025-11-10_01-18-29@v1.jsonl
backend/data/embeddings_output/clip_image_embeddings/em_full_clip-ViT-B-32_20251110_014813/: metadata.json
backend/data/embeddings_output/clip_image_embeddings/em_full_clip-ViT-B-32_20251110_025755/: metadata.json
backend/data/embeddings_output/food_items/em_100_voyage-3.5-lite_20251109_025137/: metadata.json
backend/data/embeddings_output/food_items/em_100_voyage-3.5-lite_20251109_032144/: item_ids.json  metadata.json
backend/data/embeddings_output/tags_and_hooks_embeddings/tag_embeddings_voyage-3.5-lite_20251109_183615/: metadata.json
backend/data/q100_output/run_20251110_052004/: llm_judge_results_20251110_054017.txt  llm_judge_results_20251110_054841.txt  llm_judge_results_20251110_062812.txt  llm_judge_results_20251110_063259.txt  llm_judge_results_20251110_063913.txt  llm_judge_results_20251110_070412.txt  llm_judge_results_20251110_071033.txt  params.json  results.jsonl
backend/data/q100_output/run_20251110_072451/: llm_judge_results_20251110_072859.txt  params.json  results.jsonl
backend/src/: paths_.py
backend/src/prosus/: constants.py  debug_match_query.py  llm_judge.py  match_query.py  record_100_queries_answer.py
backend/src/prosus/api_wrappers/llms/: openrouter.py
backend/src/prosus/scripts/: filter_out_non_food_items.py  make_combined_descriptions.py  make_embeddings.py  make_embeddings_clip.py  translate_items.py  translate_queries.py  viz_llm_judge_output.py
backend/src/prosus/search_indexes/: orch.py
backend/src/prosus/utils/: csv_json_jsonl.py  get_image.py  image_utils.py  read_good_ids.py
backend/src/server/: server.py
src/: paths_.py
(+89 files in other folders)
